--- a/index.html
+++ b/index.html
@@ -368,16 +368,16 @@ img.emoji {
 		</div>
 				</div>
 				</div>
-				<div class="elementor-element elementor-element-b73a9ad elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons" data-id="b73a9ad" data-element_type="widget" data-widget_type="social-icons.default">
+				<div class="elementor-element elementor-element-b73a9ad elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons" rel="noopener data-id="b73a9ad" data-element_type="widget" data-widget_type="social-icons.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-social-icons-wrapper elementor-grid">
 							<div class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-d1256d7" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-d1256d7" rel="noopener target="_blank">
 						<span class="elementor-screen-only">Facebook</span>
 						<i class="fab fa-facebook"></i>					</a>
 				</div>
 							<div class="elementor-grid-item">
-					<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-4c44efe" target="_blank">
+					<a class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-4c44efe" rel="noopener target="_blank">
 						<span class="elementor-screen-only">Instagram</span>
 						<i class="fab fa-instagram"></i>					</a>
 				</div>
